correct z-index for lumps

--- a/fiction-home.css
+++ b/fiction-home.css
@@ -58,6 +58,10 @@ html {
   Font-Family: 'Fauna One', Serif;
 }
 
+.lump {
+  z-index: 1;
+}
+
 /* nav styles */
 
 header {
@@ -97,8 +101,6 @@ justify-content: space-between;
 padding-right: 1rem;
 align-content: center;
 max-width: 900px;
-  /* margin-right: auto; */
-  /* margin-left: auto; */
 }
 
 .bar {
@@ -123,7 +125,6 @@ z-index: 201;
     flex-direction: column;
     background-color:grey;
     width: 100%;
-    /* border-radius: 10px; */
     text-align: center;
     transition: 0.3s;
     border-bottom: 2px solid black;
@@ -343,7 +344,7 @@ z-index: 201;
   overflow:hidden;
   position:relative;
   top: 0;
-  z-index: 1;
+  
   
   
 }
